--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://stan4real.github.io/FairySands/",
+  "homepage": "https://stan4real.github.io/FairySands",
   "name": "react-pobeda",
   "private": true,
   "version": "0.0.0",
